style.css
/* ... */
.drawer-button-label {
	align-self: center;
	margin-left: var(--margin-unit);
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.filter-clear-button {
	appearance: none;
	cursor: pointer;
	fill: var(--active-filter-background-color);
	stroke: currentColor;
}

.filter-clear-button:disabled {
	cursor: default;
	fill: var(--disabled-button-background-color);
	stroke: var(--disabled-button-color);
}

.filter-clear-button:disabled > .drawer-button-label {
	opacity: .2;
}

.search-label {
	display: flex;
}

.search-label > svg {
	cursor: pointer;
	fill: var(--background-color);
	stroke: currentColor;
}

.search-label > .search-container {
	align-self: center;
	margin-left: var(--margin-unit);
}

.filter-button:not(:disabled) {
	cursor: pointer;
}

.filter-button[aria-checked="false"], .filter-button:disabled {
	opacity: .2;
}

.feed-filter {
	flex-grow: 1;
}

.feed-filter > ul {
	padding: initial;
}

.about-button {
	cursor: pointer;
	fill: var(--background-color);
	stroke: currentColor;
}

.timeline {
	margin: initial;
	padding: initial;
}

.timeline > li {
	display: inline-block;
}

.date-heading {
	position: sticky;
	z-index: 1; /* Put it above `.event-thumbnail-container`. */
	top: 0;
	left: var(--drawer-width);
	width: 100%;
	text-align: center;
	background-color: var(--background-color);
	border-bottom: solid var(--border-width) var(--border-color);
	break-after: avoid-page;
}

.now {
	margin-top: var(--margin-unit);
	margin-bottom: var(--margin-unit);
	border-top: solid var(--border-width) var(--border-color);
	border-bottom: solid var(--border-width) var(--border-color);
	text-align: center;
}

/* Animate the time separator to indicate that the time is dynamically updated. */
.flashing-time .time-separator {
	animation: 2s flash infinite;
}

@keyframes flash {
	from {
		visibility: visible;
	}
	50% {
		visibility: hidden;
	}
	to {
		visibility: hidden;
	}
}

@media (prefers-reduced-motion) {
	.now-separator .time-separator {
		animation: none;
	}
}

.ongoing {
	background-color: #FF04;
}

.event {
	position: relative;
	width: calc(var(--event-width) - 2 * var(--margin-unit));
	margin: 0;
	margin-top: calc(-1 * var(--border-width));
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
	padding: var(--margin-unit);
	break-inside: avoid;
}

.event-header-grid {
	display: grid;
}

.event-thumbnail-container {
	position: relative;
	min-height: calc((var(--event-width) - 2 * var(--margin-unit)) * 9 / 16);
	order: -1;
}

.event-thumbnail {
	width: 100%;
}

.event-duration {
	position: absolute;
	right: 0;
	bottom: 0;
	border-top-left-radius: 5px;
	padding-left: calc(var(--margin-unit) / 2);
	background-color: var(--translucent-background-color);
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	color: var(--color);
}

.duration {
	position: absolute;
	right: 0;
	bottom: 0;
}

.event-members {
	margin-top: var(--margin-unit);
	padding: initial;
	overflow-x: scroll;
	white-space: nowrap;
}

.event-member {
	display: inline-block;
	margin-left: var(--margin-unit);
}

.event-member:first-child {
	margin-left: 0;
}

.event-member .avatar {
	width: 60px;
	height: 60px;
}

.popup-container {
	position: absolute;
	top: var(--margin-unit);
	right: var(--margin-unit);
}

.popup-toggle {
	cursor: pointer;
}

.popup {
	position: absolute;
	z-index: 3; /* Put it above everything else except the modal dialog. */
	right: 0;
	padding: initial;
	width: max-content;
	background-color: var(--background-color);
	border: solid var(--border-width) var(--border-color);
}

.popup-toggle[aria-expanded="false"] ~ .popup {
	display: none;
}

.popup button {
	cursor: pointer;
	padding-top: var(--margin-unit);
	padding-bottom: var(--margin-unit);
	width: 100%;
	text-align: initial;
}

.empty-result {
	text-align: center;
}

.load-more-feed {
	display: flex;
	flex-direction: column;
	justify-content: center;
	height: var(--hamburger-length);
	text-align: center;
}

.load-more-feed-button {
	width: 100%;
	height: 100%;
	font-size: initial;
}

.social-icon {
	vertical-align: middle;
	width: 2em;
	height: 2em;
	fill: currentColor;
}

.error-log {
	position: sticky;
	bottom: 0;
	z-index: 1; /* Put it above `.date-heading`. */
	margin: initial;
	padding: initial;
	max-height: calc(100vh - 260px);
	min-height: 2em;
	overflow: scroll;
	background-color: red;
	color: white;
	font-family:
		'Helvetica Neue',
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
}

.error-log > li {
	margin: var(--margin-unit);
}

.error-log a {
	color: #0FF;
}

.dismiss-error {
	float: right;
	border-radius: 5px;
	color: #000;
	background-color: #FFF;
}

.modal-backdrop {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 4; /* Put it above everything else. */
	margin: 0;
	border: none;
	width: 100vw;
	max-width: initial;
	height: 100vh;
	max-height: initial;
	padding: 0;
	background-color: var(--background-color);
	overscroll-behavior-x: none;
	overscroll-behavior-y: contain;
}

.modal-backdrop:not([open]) {
	display: none;
}

.modal-backdrop[open] ~ .primary-window {
	filter: blur(5px);
}

.modal {
	display: flex;
	flex-direction: column;
	align-self: center;
	background-color: var(--background-color);
	color: var(--color);
}

.about li {
	display: list-item;
}

.dialog-title-bar {
	display: flex;
	border-bottom: solid var(--border-width) var(--border-color);
	padding: calc(2 * var(--margin-unit));
	padding-top: 0;
	padding-bottom: 0;
	height: var(--hamburger-length);
	flex-shrink: 0;
}

.dialog-title-bar-button{
	width: 2em;
	height: 2em;
	align-self: center;
	cursor: pointer;
	stroke: currentColor;
}

.modal-back-button:disabled {
	visibility: hidden;
}

.dialog-title {
	flex-grow: 1;
	align-self: center;
	text-align: center;
}

.dialog-content {
	padding: calc(2 * var(--margin-unit));
	padding-top: 0;
	overflow-y: scroll;
}

.copyright-loading {
	margin: auto;
}

.copying-error {
	color: red;
}
/* ... */

